force-app/main/default/objects/LASERCA__Credit_Report_Log__c/LASERCA__Credit_Report_Log__c.object-meta.xml
<CustomObject>
    <label>Credit Report Log</label>
    <nameField>
        
        <displayFormat>{0000000}</displayFormat>
        
        <label>Credit Report Log Name</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Credit Report Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>