force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/File_Not_Scored__c.field-meta.xml
<CustomField>
    <fullName>File_Not_Scored__c</fullName>
    <description>Makes it easier for the CreditReportLogTrigger to handle SC3 - FILE NOT SCORED BECAUSE SUBJECT DOES NOT HAVE SUFFICIENT CREDIT</description>
    <formula>IF(ISBLANK(LASERCA__Personal_Credit_Report__c ), FALSE,
   IF(ISBLANK(LASERCA__Personal_Credit_Report__r.LASERCA__Credit_Score__c), 
      TRUE,
      FALSE
   )
)</formula>
    <inlineHelpText>TRUE, if there is a PCR but has no Credit Score.</inlineHelpText>
    <label>File Not Scored</label>
    <type>Checkbox</type>
</CustomField>