force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Co_Applicant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Co_Applicant_Last_Name__c</fullName>
    <label>Co-Applicant Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>