force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Contact__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Report Logs</relationshipLabel>
    <relationshipName>Credit_Report_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>