force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Credit_Bureau__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Bureau__c</fullName>
    <label>Credit Bureau</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Experian</fullName>
                
                
                    <label>Experian</label>
                
                </value>
            
                <value>
                
                    <fullName>TransUnion</fullName>
                
                
                    <label>TransUnion</label>
                
                </value>
            
                <value>
                
                    <fullName>Equifax</fullName>
                
                
                    <label>Equifax</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>