force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Credit_Report_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Report_Identifier__c</fullName>
    <label>Credit Report Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>