force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>