force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__First_Name__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>