force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Home_Country__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Home_Country__c</fullName>
    <label>Home Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>