force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Home_Zip__c</fullName>
    <label>Home Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>