force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Lead__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Credit Report Logs</relationshipLabel>
    <relationshipName>Credit_Report_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>