force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Login_Account__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Login_Account__c</fullName>
    <label>Login Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>