force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Personal_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Personal_Credit_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Credit Report</label>
    <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
    <relationshipLabel>Credit Report Logs</relationshipLabel>
    <relationshipName>Credit_Report_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>