force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Submit</fullName>
                
                
                    <label>Submit</label>
                
                </value>
            
                <value>
                
                    <fullName>Reissue</fullName>
                
                
                    <label>Reissue</label>
                
                </value>
            
                <value>
                
                    <fullName>Upgrade</fullName>
                
                
                    <label>Upgrade</label>
                
                </value>
            
                <value>
                
                    <fullName>Downgrade</fullName>
                
                
                    <label>Downgrade</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>