force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Special_Option__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Special_Option__c</fullName>
    <label>Special Option</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Upgrade</fullName>
                
                
                    <label>Upgrade</label>
                
                </value>
            
                <value>
                
                    <fullName>Downgrade</fullName>
                
                
                    <label>Downgrade</label>
                
                </value>
            
                <value>
                
                    <fullName>Downgrade Applicant Only</fullName>
                
                
                    <label>Downgrade Applicant Only</label>
                
                </value>
            
                <value>
                
                    <fullName>Downgrade Co-Applicant Only</fullName>
                
                
                    <label>Downgrade Co-Applicant Only</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>