force-app/main/default/objects/LASERCA__Credit_Report_Log__c/fields/LASERCA__Status__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pending</fullName>
                
                
                    <label>Pending</label>
                
                </value>
            
                <value>
                
                    <fullName>Completed</fullName>
                
                
                    <label>Completed</label>
                
                </value>
            
                <value>
                
                    <fullName>Error</fullName>
                
                
                    <label>Error</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>